--- a/.insomnia/Request/req_7f22daf1e6af41fdaeec72b845760927.yml
+++ b/.insomnia/Request/req_7f22daf1e6af41fdaeec72b845760927.yml
@@ -1,10 +1,10 @@
 _id: req_7f22daf1e6af41fdaeec72b845760927
 type: Request
 parentId: wrk_abea9c5d4b3a449ea5d3e6e9cf57110c
-modified: 1707960576966
+modified: 1707960687061
 created: 1707960562387
 url: https://www.google.com
-name: New Request
+name: Google Request
 description: ""
 method: GET
 body: {}
